# mono256_my-english-voice

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: windows-cpu.yml  windows-latency-benchmark.yml
apps/voice_mic/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt  README.md  pipeline_latency_sim.cpp  queue_benchmark.cpp  regression_thresholds.json  windows_baseline.md
cmake/: CompilerWarnings.cmake  MevDependencies.cmake  Sanitizers.cmake
config/: pipeline.toml  pipeline.windows.cuda.production.toml  pipeline.windows.cuda.toml  pipeline.windows.preview.toml  pipeline.windows.production.toml  pipeline.windows.smoke.toml  pipeline.windows.toml  pipeline.windows.webrtcvad.toml  pronunciation_hints.toml  tech_glossary.toml
configs/: default.ini
docs/: windows-11-runbook.md
eval/: LABELING.md  README.md  baseline_status.md  conversational_thresholds.json  domain_realtime_set.jsonl  generate_domain_realtime_set.py  oracle_sanity_summary.json  score_domain_eval.py
include/mev/app/: application.hpp  i_pipeline_orchestrator.hpp
include/mev/asr/: asr_types.hpp  i_asr_engine.hpp  whisper_asr_engine.hpp  whisper_asr_stub.hpp
include/mev/audio/: audio_types.hpp  i_audio_input.hpp  i_audio_output.hpp  i_vad_engine.hpp  null_vad_engine.hpp  portaudio_input.hpp  portaudio_output.hpp  resampler.hpp  simulated_audio_input.hpp  simulated_audio_output.hpp  webrtc_vad_engine.hpp
include/mev/config/: app_config.hpp
include/mev/core/: logger.hpp  profiling.hpp  spsc_ring_buffer.hpp  time.hpp  types.hpp  utterance.hpp
include/mev/domain/: domain_context_manager.hpp  i_domain_adapter.hpp  technical_domain_adapter.hpp
include/mev/infra/: gpu_scheduler.hpp  metrics.hpp
include/mev/pipeline/: chunk_committer.hpp  pipeline_orchestrator.hpp  tts_scheduler.hpp
include/mev/tts/: espeak_tts_engine.hpp  i_tts_engine.hpp  onnx_tts_stub.hpp  piper_tts_engine.hpp  speech_chunker.hpp  stub_tts_engine.hpp  tts_config.hpp  tts_types.hpp
scripts/: check_realtime_regressions.py
scripts/windows/: benchmark-latency.ps1  build.ps1  common.ps1  deps.lock.json  run.ps1  self-test.ps1  setup-dev.ps1  smoke.ps1  test.ps1
scripts/wsl/: _windows_common.sh  windows-benchmark.sh  windows-build.sh  windows-run.sh  windows-self-test.sh  windows-smoke.sh  windows-test.sh
src/: CMakeLists.txt
src/app/: application.cpp
src/asr/: whisper_asr_engine.cpp  whisper_asr_stub.cpp
src/audio/: portaudio_input.cpp  portaudio_output.cpp  resampler.cpp  simulated_audio_input.cpp  simulated_audio_output.cpp  webrtc_vad_engine.cpp
src/config/: app_config.cpp
src/domain/: domain_context_manager.cpp  technical_domain_adapter.cpp
src/infra/: metrics.cpp
src/pipeline/: chunk_committer.cpp  pipeline_orchestrator.cpp  tts_scheduler.cpp
src/tts/: espeak_tts_engine.cpp  onnx_tts_stub.cpp  piper_tts_engine.cpp  speech_chunker.cpp  stub_tts_engine.cpp
tests/: CMakeLists.txt  test_asr_incremental_contract.cpp  test_chunk_committer.cpp  test_domain_adapter.cpp  test_domain_corrections.cpp  test_espeak_tts.cpp  test_gpu_scheduler.cpp  test_pipeline_shutdown.cpp  test_pipeline_wiring.cpp  test_piper_tts.cpp  test_portaudio_enum.cpp  test_resampler.cpp  test_runtime_backend_selection.cpp  test_speech_chunker.cpp  test_spsc_ring.cpp  test_toml_config.cpp  test_tts_fallback_contract.cpp  test_tts_scheduler_policy.cpp  test_utterance_lifecycle.cpp  test_vad_engine.cpp  test_voice_mic_cli_contract.cpp  test_whisper_asr.cpp
